--- a/compose.yaml
+++ b/compose.yaml
@@ -7,19 +7,21 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
     volumes:
-      - ./tmp/db:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
   web:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - ./:/myapp
     ports:
-      - '3000:3000'
+      - 3000:3000
     environment:
+      POSTGRES_USER: postgres  
       POSTGRES_PASSWORD: password
     tty: true
     stdin_open: true
     depends_on:
       - db
-    links:
-      - db
+
+volumes:
+  postgres-data:  
